<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="@dimen/dp10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup

            android:id="@+id/status_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/alive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive" />

            <RadioButton
                android:id="@+id/died"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead" />

            <RadioButton
                android:id="@+id/unknownStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/species_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_group">

            <RadioButton
                android:id="@+id/human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human" />

            <RadioButton
                android:id="@+id/humanoid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humanoid" />

            <RadioButton
                android:id="@+id/alien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alien" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp5"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dp15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/species_group">

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/genderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderless" />

            <RadioButton
                android:id="@+id/unknownGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown" />

        </RadioGroup>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp40"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginBottom="@dimen/dp10"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnClear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_group" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginEnd="@dimen/dp40"
            android:layout_marginBottom="@dimen/dp10"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSearch"
            app:layout_constraintTop_toBottomOf="@id/gender_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>